--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -1,8 +1,10 @@
 # my global config
 global:
-  scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
-  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
+  #scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+  #evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
   # scrape_timeout is set to the global default (10s).
+  scrape_interval: 60s
+  scrape_timeout: 45s
 
 # Alertmanager configuration
 alerting:
@@ -28,6 +30,10 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'node'
+#  - job_name: 'node'
+#    static_configs:
+#      - targets: ['node-exporter:9100']
+
+  - job_name: 'speedtest'
     static_configs:
-      - targets: ['node-exporter:9100']
+       - targets: ['localhost:9112']
