--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -3,8 +3,6 @@ global:
   #scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
   #evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
   # scrape_timeout is set to the global default (10s).
-  scrape_interval: 60s
-  scrape_timeout: 45s
 
 # Alertmanager configuration
 alerting:
@@ -23,10 +21,6 @@ rule_files:
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: 'prometheus'
-
-    # metrics_path defaults to '/metrics'
-    # scheme defaults to 'http'.
-
     static_configs:
       - targets: ['localhost:9090']
 
@@ -35,5 +29,7 @@ scrape_configs:
 #      - targets: ['node-exporter:9100']
 
   - job_name: 'speedtest'
+    scrape_interval: 600s
+    scrape_timeout: 45s
     static_configs:
-       - targets: ['localhost:9112']
+       - targets: ['speedtest-exporter:9112']
