--- a/configs/prometheus.yml
+++ b/configs/prometheus.yml
@@ -24,12 +24,22 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
+  - job_name: 'fritzbox'
+    static_configs:
+       - targets: ['fritzbox-exporter:9133']
+
+  - job_name: 'mlab'
+    scrape_interval: 600s
+    scrape_timeout: 59s
+    static_configs:
+       - targets: ['mlab-exporter:9122']
+       
 #  - job_name: 'node'
 #    static_configs:
 #      - targets: ['node-exporter:9100']
 
-  - job_name: 'speedtest'
-    scrape_interval: 600s
-    scrape_timeout: 59s
-    static_configs:
-       - targets: ['speedtest-exporter:9112']
+#  - job_name: 'speedtest'
+#    scrape_interval: 600s
+#    scrape_timeout: 59s
+#    static_configs:
+#       - targets: ['speedtest-exporter:9112']
